tests/paczka1/small_fuzzy/40738246.err
Error in line 1: WKy A774 37,1
Error in line 10: tClGRe4kb S479 11,2
